@@ -9,6 +9,7 @@ DIST chunkin-nginx-module-0.21.tgz 89609 RMD160 c685b5cc3fcb540eb45321d92ded63f3
 DIST nginx-0.8.38.tar.gz 623969 RMD160 62b23252d16a861ea092cbd8bc28882e4f84157d SHA1 8e48ac109b07f0542ccda93e5b4bab67d9598aef SHA256 a97241207e7060aa04571e313908f22e007df5b2667c42274420e6a961b2c8c5
 DIST nginx-0.8.52.tar.gz 649181 RMD160 6533826ace004cdcb745e014bb6c0394fcff8170 SHA1 086caf2e975ab70bcb95b2df6dfcc3fd0f3d6344 SHA256 7b359b8fcb65e13a70a7e2f1aa2175e4ff9b20ea9162503e760167f8d1f5b47e
 DIST nginx-0.8.53.tar.gz 649835 RMD160 2af0c8e108a68a3936aeca646d33ceaf0f1d56c8 SHA1 9bf78f55ef41aa54ab1c5caad94756d8e3e13aec SHA256 8ab8a87beb555d9ea09fe61d0de86a71ea4e90ef7970df0d38f7acfb9bed6dcf
+DIST nginx-0.8.54.tar.gz 650001 RMD160 2c3540d48d89c236c1c562a7476bd9c3acf81b2b SHA1 4d63c35b8974dba42cc62dd5046ae89df3528e34 SHA256 12e28efb9a54452fa6e579e08ce7c864e49d6ea6104cc2b3de5a4416ead90593
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST ngx-http-headers-more-0.08.tar.gz 71764 RMD160 63ee177d5abca7c958c88197f02a4063c88dba7c SHA1 b8c6f2499e44fd9fb84bef87b3f4588ddfa70798 SHA256 3e3bc43e98d95b8a0923cf6ec1af5644e855d15e33b6553096e02c53c69bc4d5
 DIST ngx-http-headers-more-0.13.tar.gz 76271 RMD160 b11fbdf8e6fba5327fedd22e517da36340ec2473 SHA1 29def6aa44faf906d3c400b6379d6dd65d959590 SHA256 52e2cb3b81327e9225cfa87291b93dd96b798702f8e3b0f20f06d38850fc2629
@@ -20,5 +21,6 @@ DIST uwsgi-0.9.5.1.tar.gz 120134 RMD160 6ad9b928a9bbf764679c1db3b1326f8d445febbb
 EBUILD nginx-0.8.38-r1.ebuild 10966 RMD160 360b2ce8de499cdc6bce73e9cc3b63fa7ed12834 SHA1 13ee7f40584175eef932e88b338faf285f22e417 SHA256 d7eac58185fc7df3379c2704ec972687ea0bc10a7a4226e5403aad7109aa719b
 EBUILD nginx-0.8.52.ebuild 10905 RMD160 b958cebc404f74be4fd1117302dda93a99fa3c40 SHA1 43594f2d425a6970052a96512380f294f019f1ad SHA256 1a456c6ddd1d453b7810a7a880d692f4025f667a7910a1013c2a95f8445ba6a4
 EBUILD nginx-0.8.53.ebuild 11039 RMD160 181417c3dc5353e45365c779673b5d1a993282af SHA1 47584ed7c46d71a499edacfb882a77b9c763e4cf SHA256 887f5f875fba913937be1649697758b2096d5a8d7babf966d50fd064d181363d
-MISC ChangeLog 4350 RMD160 b6620549b933dea360cfc77683a8b0bb44287362 SHA1 ba44beab7d44e84e324f6bcf13d28c306a51137a SHA256 7fc9199cc05eda1fc0970b56219e9f7639fea821dbedf74e08d85ffbca929184
+EBUILD nginx-0.8.54.ebuild 11039 RMD160 181417c3dc5353e45365c779673b5d1a993282af SHA1 47584ed7c46d71a499edacfb882a77b9c763e4cf SHA256 887f5f875fba913937be1649697758b2096d5a8d7babf966d50fd064d181363d
+MISC ChangeLog 4462 RMD160 6b5bd09edd8bc548505255f47e93bafd028cd6e3 SHA1 d831731584db335b1abf7aa2e254f7334ea0408f SHA256 80fc9b08a0e83fa43edd0d6f42f41f0ec33f9e12c7c93e828ea5fa09f110faf5
 MISC metadata.xml 700 RMD160 fdc32c78fe99a870f61c081172c198a3ebe2dae6 SHA1 af42859ae91c302e736f00a7e06cbbde7fc5d65b SHA256 5b2325acd26d95505454442f8cdf6c49f86b32b9c73e623c2a47bcfb20ccd000
