@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nginx-0.8.54 (19 Dec 2010)
+
+  19 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> +nginx-0.8.54.ebuild:
+  bump
+
   06 Nov 2010; Rion <rion4ik@gmail.com> nginx-0.8.53.ebuild:
   improved chunkin module handling
 
